# backup-scripts

./: .gitignore  CHANGELOG  CHANGELOG.rst  README.rst  android-sync  android-sync-mtp  android-sync-py  backup-chaos  backup-external  backup-gamma  backup-hauptliste  backup-ng  backup-sd  backup-sigma  backup-speedport  backup-status  backup-usb  backup-webserver  backup-webservers  backup-webservers.py  general_backup.sh  handy  makefile  nexus  provision-simple  pyproject.toml  setup-webserver.py  setup.py  table.py  webserverbackup.py
backup_scripts/: android.py  external.py  sshfs.py
backupscripts/: android.py  external.py  provision.py  readinglist.py  sshfs.py  status.py  todo.py
doc/: conf.py  index.rst
doc/man/: backup-external.rst
tests/: __init__.py
tests/backupscripts/: __init__.py  todo.py
webservers/: general_backup.sh
