[tool.poetry]
name = "backup-scripts"
version = "0.1.0"
description = ""
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
android-sync = "backupscripts.android:main"
backup-external = "backupscripts.external:main"
backup-status = "backupscripts.status:main"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
