[tool.poetry]
name = "backup-scripts"
version = "0.1.0"
description = ""
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
android-sync = "backup_scripts.android:main"
backup-external = "backup_scripts.external:main"
backup-status = "backup_scripts.status:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
